Lambda API - Criado método para a comunicação com a SQS que consequentemente vai disparar a lambda de SQS
