# examples/lambda_api/app.py
@@ -1,9 +1,18 @@
 import base64
 import os
-from lambda_app.boot import load_dot_env
+from lambda_app.boot import load_dot_env,register_vendor
+register_vendor()
 
 # load env
 from lambda_app.config import get_config
+from lambda_app.enums.events import EventType
+from lambda_app.enums.messages import MessagesEnum
+from lambda_app.events.tracker import EventTracker
+from lambda_app.exceptions import ApiException
+from lambda_app.http_resources.request import ApiRequest
+from lambda_app.http_resources.response import ApiResponse
+from lambda_app.services.v1.ocoren_event_service import OcorenEventService
+from lambda_app.vos.events import EventVO
 
 env = os.environ['ENVIRONMENT_NAME'] if 'ENVIRONMENT_NAME' in os.environ else None
 load_dot_env(env)
@@ -15,6 +24,7 @@ from lambda_app.http_helper import CUSTOM_DEFAULT_HEADERS
 from lambda_app.lambda_flask import LambdaFlask
 from lambda_app.openapi import spec, get_doc, generate_openapi_yml
 from lambda_app.openapi import api_schemas
+from lambda_app.services.event_manager import EventManager
 
 # config
 config = get_config()
@@ -87,8 +97,111 @@ def openapi():
     return http_helper.create_response(body=html, status_code=200, headers=headers)
 
 
+@app.route('/v1/event/<event_type>', methods=['POST'])
+def event_create(event_type):
+    """
+    :param event_type:
+    :return:
+    ---
+    post:
+        summary: Create event
+        parameters:
+            - in: path
+              name: event_type
+              description: "Event type"
+              required: true
+              schema:
+                type: string
+                example: ocoren-event
+        requestBody:
+            description: 'Event to be created'
+            required: true
+            content:
+                application/json:
+                    schema: EventCreateRequest
+        responses:
+            200:
+                content:
+                    application/json:
+                        schema: EventCreateResponseSchema
+            4xx:
+                content:
+                    application/json:
+                        schema: EventCreateErrorResponseSchema
+        """
+    request = ApiRequest().parse_request(app)
+    logger.info('event_type: {}'.format(event_type))
+    logger.info('request: {}'.format(request))
+
+    event_tracker = EventTracker(logger)
+
+    status_code = 200
+    response = ApiResponse(request)
+    response.set_hateos(False)
+    try:
+        # event_type validation
+        if EventType.from_value(event_type) not in EventType.get_public_events():
+            exception = ApiException(MessagesEnum.EVENT_TYPE_UNKNOWN_ERROR)
+            exception.set_message_params([event_type])
+            raise exception
+
+        event_vo = EventVO(event_type=event_type, data=request.where)
+        # if EventType.from_value(event_type) == EventType.OCOREN_EVENT:
+        #     event_service = OcorenEventService()
+        # else:
+        #     event_service = ProductEventService()
+        event_service = OcorenEventService()
+        service = EventManager(logger=logger, event_service=event_service)
+        result = service.process(event_vo)
+        event_hash = event_vo.hash
+
+        event_tracker.track(event_hash, event_vo.to_dict())
+
+        if result:
+            code = MessagesEnum.EVENT_REGISTERED_WITH_SUCCESS.code
+            label = MessagesEnum.EVENT_REGISTERED_WITH_SUCCESS.label
+            message = MessagesEnum.EVENT_REGISTERED_WITH_SUCCESS.message
+            params = None
+        else:
+            if isinstance(service.exception, ApiException):
+                raise service.exception
+            else:
+                raise ApiException(MessagesEnum.INTERNAL_SERVER_ERROR)
+    except Exception as err:
+        logger.error(err)
+        result = False
+        event_hash = None
+        if isinstance(err, ApiException):
+            api_ex = err
+            status_code = 400
+        else:
+            api_ex = ApiException(MessagesEnum.CREATE_ERROR)
+            status_code = 500
+
+        code = api_ex.code
+        label = api_ex.label
+        message = api_ex.message
+        params = api_ex.params
+
+    data = {
+        "result": result,
+        "event_hash": event_hash,
+        "code": code,
+        "label": label,
+        "message": message,
+        "params": params
+    }
+
+    response.set_data(data)
+
+    event_tracker.track(event_hash, data)
+    return response.get_response(status_code)
+
+
 # doc
 spec.path(view=alive, path="/alive", operations=get_doc(alive))
+# spec.path(view=event_list, path="/v1/event/{event_type}", operations=get_doc(event_list))
+spec.path(view=event_create, path="/v1/event/{event_type}", operations=get_doc(event_create))
 
 print_routes(app, logger)
 logger.info('Running at {}'.format(os.environ['APP_ENV']))
